src/snapshots/purring_lib__parser__tests__import_with_newlines.snap
---
source: src/parser.rs
expression: "p_import(\"import A (foo\\n , bar\\n , baz)\")"
---
14 of 14
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 13)
   ImportDecl::Multiple
    QProperName
     NULL
     ProperName
      (2, 7)->(2, 8)
     Import::Value
      Name
       (2, 10)->(2, 13)
     Import::Value
      Name
       (3, 3)->(3, 6)
     Import::Value
      Name
       (4, 3)->(4, 6)
===
