src/snapshots/purring_lib__parser__tests__minimal_a.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule A.C (a) where\n\nt :: T\nt =\n  T.d\n    [ T.d\n        let\n          q a b =\n            a\n              { a: _.o\n              , b: _.id\n              , c\n              , d: 1\n              , e\n              }\n\n          q a b c =\n            A\n              { a:\n                  case b of\n                    true -> Nothing\n                    false -> Just (page + 1)\n              , b: b # c\n              }\n\n          q = a b []\n        in \\_ -> 123\n    ]\n            \")"
---
96 of 96
===
Module
 Header
  QProperName
   Qual
    (1, 7)->(1, 9)
   ProperName
    (1, 9)->(1, 10)
   Export::Value
    Name
     (1, 12)->(1, 13)
  Decl::Sig
   Name
    (3, 0)->(3, 1)
   Typ::Constructor
    QProperName
     NULL
     ProperName
      (3, 5)->(3, 6)
  Decl::Def
   Name
    (4, 0)->(4, 1)
   GuardedExpr::Unconditional
    Expr::App
     Expr::Ident
      QName
       Qual
        (5, 2)->(5, 4)
       Name
        (5, 4)->(5, 5)
     Expr::Array
      (6, 4)->(6, 5)
       Expr::App
        Expr::Ident
         QName
          Qual
           (6, 6)->(6, 8)
          Name
           (6, 8)->(6, 9)
        Expr::Let
         (7, 8)->(7, 11)
          LetBinding::Name
           Name
            (8, 10)->(8, 11)
            Binder::Var
             Name
              (8, 12)->(8, 13)
            Binder::Var
             Name
              (8, 14)->(8, 15)
           GuardedExpr::Unconditional
            Expr::App
             Expr::Ident
              QName
               NULL
               Name
                (9, 12)->(9, 13)
             Expr::Record
              (10, 14)->(10, 15)
               RecordLabelExpr::Field
                Label
                 (10, 16)->(10, 17)
                Expr::App
                 Expr::Access
                  Expr::Section
                   (10, 19)->(10, 20)
                   Label
                    (10, 21)->(10, 22)
                 Expr::Ident
                  QName
                   NULL
                   Name
                    (10, 21)->(10, 22)
               RecordLabelExpr::Field
                Label
                 (11, 16)->(11, 17)
                Expr::App
                 Expr::Access
                  Expr::Section
                   (11, 19)->(11, 20)
                   Label
                    (11, 21)->(11, 23)
                 Expr::Ident
                  QName
                   NULL
                   Name
                    (11, 21)->(11, 23)
               RecordLabelExpr::Pun
                Name
                 (12, 16)->(12, 17)
               RecordLabelExpr::Field
                Label
                 (13, 16)->(13, 17)
                Expr::Number
                 Number
                  (13, 19)->(13, 20)
               RecordLabelExpr::Pun
                Name
                 (14, 16)->(14, 17)
              (17, 10)->(17, 11)
          LetBinding::Name
           Name
            (17, 10)->(17, 11)
            Binder::Var
             Name
              (17, 12)->(17, 13)
            Binder::Var
             Name
              (17, 14)->(17, 15)
            Binder::Var
             Name
              (17, 16)->(17, 17)
           GuardedExpr::Unconditional
            Expr::App
             Expr::Constructor
              QProperName
               NULL
               ProperName
                (18, 12)->(18, 13)
             Expr::Record
              (19, 14)->(19, 15)
               RecordLabelExpr::Field
                Label
                 (19, 16)->(19, 17)
                Expr::Case
                 (20, 18)->(20, 22)
                  Expr::Ident
                   QName
                    NULL
                    Name
                     (20, 23)->(20, 24)
                  CaseBranch
                    Binder::Var
                     Name
                      (21, 20)->(21, 24)
                   GuardedExpr::Unconditional
                    Expr::Constructor
                     QProperName
                      NULL
                      ProperName
                       (21, 28)->(21, 35)
                  CaseBranch
                    Binder::Var
                     Name
                      (22, 20)->(22, 25)
                   GuardedExpr::Unconditional
                    Expr::App
                     Expr::Constructor
                      QProperName
                       NULL
                       ProperName
                        (22, 29)->(22, 33)
                     Expr::Paren
                      Expr::Op
                       Expr::Ident
                        QName
                         NULL
                         Name
                          (22, 35)->(22, 39)
                       QOp
                        NULL
                        Op
                         (22, 40)->(22, 41)
                       Expr::Number
                        Number
                         (22, 42)->(22, 43)
               RecordLabelExpr::Field
                Label
                 (23, 16)->(23, 17)
                Expr::Op
                 Expr::Ident
                  QName
                   NULL
                   Name
                    (23, 19)->(23, 20)
                 QOp
                  NULL
                  Op
                   (23, 21)->(23, 22)
                 Expr::Ident
                  QName
                   NULL
                   Name
                    (23, 23)->(23, 24)
              (26, 10)->(26, 11)
          LetBinding::Pattern
           Binder::Var
            Name
             (26, 10)->(26, 11)
           Expr::App
            Expr::App
             Expr::Ident
              QName
               NULL
               Name
                (26, 14)->(26, 15)
             Expr::Ident
              QName
               NULL
               Name
                (26, 16)->(26, 17)
            Expr::Array
             (26, 18)->(26, 19)
             (27, 8)->(27, 10)
         Expr::Lambda
          (27, 11)->(27, 12)
           Binder::Wildcard
            (27, 12)->(27, 13)
          Expr::Number
           Number
            (27, 17)->(27, 20)
      (29, 0)->(29, 0)
===
