src/snapshots/purring_lib__parser__tests__minimal_d.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule D where\n\ntype D = X.Z (A (B.C D)) E\n            \")"
---
19 of 19
===
Module
 Header
  QProperName
   NULL
   ProperName
    (1, 7)->(1, 8)
  Decl::Type
   ProperName
    (3, 5)->(3, 6)
   Typ::App
    Typ::App
     Typ::Constructor
      QProperName
       Qual
        (3, 9)->(3, 11)
       ProperName
        (3, 11)->(3, 12)
     Typ::App
      Typ::Constructor
       QProperName
        NULL
        ProperName
         (3, 14)->(3, 15)
      Typ::App
       Typ::Constructor
        QProperName
         Qual
          (3, 17)->(3, 19)
         ProperName
          (3, 19)->(3, 20)
       Typ::Constructor
        QProperName
         NULL
         ProperName
          (3, 21)->(3, 22)
    Typ::Constructor
     QProperName
      NULL
      ProperName
       (3, 25)->(3, 26)
===
