src/snapshots/purring_lib__parser__tests__minimal_f.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule F () where\nderive newtype instance Eq Tag\n\")"
---
12 of 12
===
Module
 Header
  QProperName
   NULL
   ProperName
    (1, 7)->(1, 8)
===
